[package]
name = "axum-jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4",  features = ["multipart"] }
axum-macros = "0.4.1"
jsonwebtoken = "9.3"
once_cell = "1.8"
serde = { version = "1.0" features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0" features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" features = ["env-filter"] }